--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -16,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Car Dealership</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -39,17 +40,19 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./cart.html">Cart</a>
+              <a class="nav-link active" href="./cart.html"><i class="material-icons ">shopping_cart</i><span id="badge"></span>
+                </a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    <div id="cart"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script src="./products.js"></script>
+    <script src="./addToCart.js"></script>
   </body>
 </html>
