--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>POS</title>
+    <title>E-commerce</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -39,7 +40,8 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./cart.html">Cart</a>
+              <a class="nav-link" href="./cart.html"><i class="material-icons" data-toggle="tooltip" title="Add to cart">shopping_cart</i><span id="badge"></span>
+              </a>
             </li>
             <li class="nav-item">
               <!-- Button trigger modal -->
@@ -139,6 +141,42 @@
         </div>
       </div>
     </nav>
+    <!-- category -->
+    <div class="container d-flex justify-content-end mb-3 mt-5 pt-4">
+      <div class="d-flex w-25 ms-3">
+        <label for="" class="form-label">Sort by category</label>
+        <select
+          class="form-select"
+          name=""
+          id="sortCategory"
+          onchange="sortCategory()"
+        >
+          <option value="Haval">Haval</option>
+          <option value="Mazda">Mazda</option>
+          <option value="BMW">BMW</option>
+          <option value="Mercedes">Mercedes</option>
+        </select>
+      </div>
+      <div class="d-flex w-25 ms-3">
+        <label for="" class="form-label">Sort name</label>
+        <select class="form-select" name="" id="sortName" onchange="sortName()">
+          <option value="ascending">Ascending</option>
+          <option value="descending">Descending</option>
+        </select>
+      </div>
+      <div class="d-flex w-25 ms-3">
+        <label for="" class="form-label">Sort price</label>
+        <select
+          class="form-select"
+          name=""
+          id="sortPrice"
+          onchange="sortPrice()"
+        >
+          <option value="ascending">Ascending</option>
+          <option value="descending">Descending</option>
+        </select>
+      </div>
+    </div>
     <div id="products" class="container d-flex"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
