--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Car Dealership</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -92,9 +92,10 @@
                           name="addCategory"
                           id="addCategory"
                         >
-                          <option value="Fruit">Fruit</option>
-                          <option value="Vegetables">Vegetables</option>
-                          <option value="Meat">Meat</option>
+                          <option value="Haval">Haval</option>
+                          <option value="Mazda">Mazda</option>
+                          <option value="BMW">BMW</option>
+                          <option value="Mercedes">Mercedes</option>
                         </select>
                       </div>
                       <div class="mb-3">
